# prueba_tecnica_data_engineer_etl_tvmaze

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
data/: clean_data_tvmaze_january_2024.parquet
db/: tvmaze_data.db
json/: data_tvmaze_2024-01-01.json  data_tvmaze_2024-01-02.json  data_tvmaze_2024-01-03.json  data_tvmaze_2024-01-04.json  data_tvmaze_2024-01-05.json  data_tvmaze_2024-01-08.json  data_tvmaze_2024-01-09.json  data_tvmaze_2024-01-10.json  data_tvmaze_2024-01-11.json  data_tvmaze_2024-01-15.json  data_tvmaze_2024-01-16.json  data_tvmaze_2024-01-17.json  data_tvmaze_2024-01-18.json  data_tvmaze_2024-01-20.json  data_tvmaze_2024-01-22.json  data_tvmaze_2024-01-23.json  data_tvmaze_2024-01-24.json  data_tvmaze_2024-01-25.json  data_tvmaze_2024-01-27.json  data_tvmaze_2024-01-29.json  data_tvmaze_2024-01-30.json  data_tvmaze_2024-01-31.json
src/: analysis.py  extraction.py  load.py  main_etl.py  transform.py
src/tests/: mock_response.json  test_extraction.py  test_load.py  test_transform.py
