[tool.poetry]
name = "prueba-tecnica-data-engineer-etl-tvmaze"
version = "0.1.0"
description = ""
authors = ["Luisa Fernanda Morales"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
