[tool.poetry]
name = "prueba-tecnica-data-engineer-etl-tvmaze"
version = "0.1.0"
description = ""
authors = ["Luisa Fernanda Morales"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
requests = "^2.32.3"
pandas = "^2.2.3"
ydata-profiling = "^4.16.1"
pytest = "^8.3.5"
beautifulsoup4 = "^4.13.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
